@@ -1,3 +1,8 @@
+1999-08-25  Ken Raeburn  <raeburn@mit.edu>
+
+	* kinit.c (optind, optarg) [sun]: Declare on SunOS 4.  Maybe
+	declare unconditionally, in the future.
+
 1999-08-12  Ken Raeburn  <raeburn@mit.edu>
 
 	* kinit.c (main): Initialize cache_name to null, in case it's not
